2010-04-20  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #14031: RealURL 1.8.0 floods sys_log with error messages: tx_realurl::encodeSpURL_urlPrepend is no valid callback
	* Fixed bug #13966: RealUrl uses t3lib_div::fixed_lgd() which is deprecated
	* Added a note to the manual that _DEFAULT must not be used in multidomain configurations

2010-04-19  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Removed duplicate code

2010-04-07  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Released version 1.8.0

2010-03-29  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #13918: Autoconf breaks SimulateStatic-URLs

2010-03-16  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Small optimization for aliases
	* Fixed bug #6400: Unexpected behaviour when postVarsets => _DEFAULT is not set
	* Fixed bug #13721: No access to configuration in encodeTitle_userProc function from inside tx_realurl

2010-03-15  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #10348: 301 Moved Permanently with redirects and redirects_regex
	* Fixed bug #12968: Set RealURL as conflicting with simulatestatic
	* Added PHP5 access specifiers to tx_realurl and tx_realurl_advanced

2010-03-10  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #12919: Mistyping of a sql query 'expires' instead of 'expire'
	* Preparatory work for #9858: Making slash at the end ot the path configurable
	* Fixed bug #13507: Deleted templates are included when finding rootpage_id by searching sys_template
	* Fixed bug #13018: editPathCacheEntry() attempts to update nonexistent db field in class.tx_realurl_modfunc1.php
	* Fixed bug #12992: Table "tx_realurl_uniqalias" doesn't get created on a fresh installation (MySQL)
	* Fixed bug #9025: RealUrl generates links to live version within a draft workspace preview
	* Fixed bug #12698: Empty conf[spaceCharacter] => PHP Warning "Compilation failed"
	* Fixed bug #12846: Parsing issue with DBAL
